--- a/sample/bower.json
+++ b/sample/bower.json
@@ -3,7 +3,7 @@
   "main": "index.js",
   "homepage": "https://github.com/gdsestimating/three-dxf",
   "authors": [
-    "gdsestimating.com"
+    "masamiki.matsubara@amd-lab.com"
   ],
   "description": "example project of using the three-dxf cad viewer",
   "moduleType": [
@@ -25,6 +25,6 @@
   "dependencies": {
     "jquery": "~2.2.0",
     "dxf-parser": "~0.4.2",
-    "three-dxf": "https://github.com/shinobushiva/three-dxf.git#master"
+    "three-dxf": "https://github.com/AMDlab/three-dxf.git#master"
   }
 }
